--- a/trabalhoP/PT/kshisen.po
+++ b/trabalhoP/PT/kshisen.po
@@ -1,9 +1,232 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
-<title>403 Forbidden</title>
-</head><body>
-<h1>Forbidden</h1>
-<p>You don't have permission to access /~jj/plc-17/PO/PT/kshisen.po
-on this server.<br />
-</p>
-</body></html>
+msgid ""
+msgstr ""
+"Project-Id-Version: kuser\n"
+"POT-Creation-Date: 2002-01-16 02:36+0100\n"
+"PO-Revision-Date: 2001-01-10 22:10-0300\n"
+"Last-Translator: Elvis Pfützenreuter <epx@conectiva.com>\n"
+"Language-Team: Brazilian Portugueses <kde-i18n-pt_BR@kde.org>\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 0.7.1\n"
+
+#: main.cpp:50
+msgid "KDE Game"
+msgstr "Jogo do KDE"
+
+#: app.cpp:72 main.cpp:54
+msgid "Shisen-Sho"
+msgstr "Shisen-Sho"
+
+#: board.cpp:256
+msgid "Cannot load pixmaps!"
+msgstr "Não foi possível carregar imagens!"
+
+#: app.cpp:89
+msgid "Your time: XX:XX:XX (XXXXXXXXXXXXXXX)"
+msgstr "Seu tempo: XX:XX:XX (XXXXXXXXXXXXXXX)"
+
+#: app.cpp:90 app.cpp:244 app.cpp:261
+msgid "Cheat mode"
+msgstr "Modo Malandro"
+
+#: app.cpp:152
+#, fuzzy
+msgid "Is Game Solvable?"
+msgstr "O jogo tem solução ?"
+
+#: app.cpp:153
+#, fuzzy
+msgid "Res&tart Game"
+msgstr "&Recomeçar jogo"
+
+#: app.cpp:154
+#, fuzzy
+msgid "Get &Hint"
+msgstr "&Dica"
+
+#: app.cpp:166
+msgid "Si&ze"
+msgstr "Tama&nho"
+
+#: app.cpp:167
+msgid "14x6"
+msgstr "14x6"
+
+#: app.cpp:168
+msgid "18x8"
+msgstr "18x8"
+
+#: app.cpp:169
+msgid "24x12"
+msgstr "24x12"
+
+#: app.cpp:170
+msgid "26x14"
+msgstr "26x14"
+
+#: app.cpp:171
+msgid "30x16"
+msgstr "30x16"
+
+#: app.cpp:175
+msgid "S&peed"
+msgstr "&Velocidade"
+
+#: app.cpp:176
+msgid "Very fast"
+msgstr "Muito rápido"
+
+#: app.cpp:177
+msgid "Fast"
+msgstr "Rápido"
+
+#: app.cpp:178 app.cpp:186
+msgid "Medium"
+msgstr "Médio"
+
+#: app.cpp:179
+msgid "Slow"
+msgstr "Lento"
+
+#: app.cpp:180
+msgid "Very slow"
+msgstr "Muito lento"
+
+#: app.cpp:184
+msgid "&Level"
+msgstr "&Nível"
+
+#: app.cpp:185
+msgid "Easy"
+msgstr "Fácil"
+
+#: app.cpp:187
+msgid "Hard"
+msgstr "Difícil"
+
+#: app.cpp:190
+msgid "G&ravity"
+msgstr "G&ravidade"
+
+#: app.cpp:191
+#, fuzzy
+msgid "Disallow Unsolvable Games"
+msgstr "Não permitir jogos sem solução"
+
+#: app.cpp:224
+msgid "This game is solveable"
+msgstr "Este jogo tem solução"
+
+#: app.cpp:227
+msgid "This game is NOT solveable"
+msgstr "Este jogo NÃO tem solução"
+
+#: app.cpp:234
+#, fuzzy
+msgid "R&esume game"
+msgstr "Continuar o jogo"
+
+#: app.cpp:236
+msgid "&Pause game"
+msgstr "&Pausar jogo"
+
+#: app.cpp:339
+msgid "No more moves possible!"
+msgstr "Não há mais jogadas possíveis!"
+
+#: app.cpp:340 app.cpp:372
+msgid "End of game"
+msgstr "Fim de jogo"
+
+#: app.cpp:367
+#, c-format
+msgid "Congratulations! You made it in %02d:%02d:%02d"
+msgstr "Parabéns! Conseguiu em %02d:%02d:%02d"
+
+#: app.cpp:382
+msgid "Your time: %1:%2:%3 %4"
+msgstr "O teu tempo: %1:%2:%3 %4"
+
+#: app.cpp:386
+msgid " (Paused)"
+msgstr " (Pausado)"
+
+#: app.cpp:394
+msgid ""
+"You've made in into the \"Hall Of Fame\".Type in\n"
+"your name so mankind will always remember\n"
+"your cool rating."
+msgstr ""
+"Conseguiu entrar no \"Pódio\". Introduza o\n"
+"seu nome para que a humanidade se lembre\n"
+"sempre da sua posição."
+
+#: app.cpp:397
+msgid "Your name:"
+msgstr "O seu nome:"
+
+#: app.cpp:623
+#, fuzzy
+msgid "Shisen-Sho: Hall of Fame"
+msgstr "Shisen-Sho: Pódio"
+
+#: app.cpp:627
+msgid "Hall Of Fame"
+msgstr "Pódio"
+
+#: app.cpp:648
+msgid "Rank"
+msgstr "Posição"
+
+#: app.cpp:652
+msgid "Name"
+msgstr "Nome"
+
+#: app.cpp:656
+msgid "Time"
+msgstr "Tempo"
+
+#: app.cpp:660
+msgid "Size"
+msgstr "Tamanho"
+
+#: app.cpp:664
+msgid "Score"
+msgstr "Pontuação"
+
+#: app.cpp:708
+msgid "(gravity)"
+msgstr "(gravidade)"
+
+#: _translatorinfo.cpp:1
+msgid ""
+"_: NAME OF TRANSLATORS\n"
+"Your names"
+msgstr "Elvis Pfützenreuter"
+
+#: _translatorinfo.cpp:3
+msgid ""
+"_: EMAIL OF TRANSLATORS\n"
+"Your emails"
+msgstr "epx@conectiva.com.br"
+
+#~ msgid "KShisen"
+#~ msgstr "KShisen"
+
+#~ msgid "Hall of &Fame"
+#~ msgstr "&Pódio"
+
+#~ msgid "&New game"
+#~ msgstr "&Novo jogo"
+
+#~ msgid ""
+#~ "\n"
+#~ "\n"
+#~ "by Mario Weilguni"
+#~ msgstr ""
+#~ "\n"
+#~ "\n"
+#~ "por Mario Weilguni"
+
+#~ msgid "Pause game"
+#~ msgstr "Pausar jogo"
