--- a/trabalhoP/FR/ksirtet.po
+++ b/trabalhoP/FR/ksirtet.po
@@ -1,9 +1,302 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
-<title>403 Forbidden</title>
-</head><body>
-<h1>Forbidden</h1>
-<p>You don't have permission to access /~jj/plc-17/PO/FR/ksirtet.po
-on this server.<br />
-</p>
-</body></html>
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR Free Software Foundation, Inc.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#
+msgid ""
+msgstr ""
+"Project-Id-Version: PACKAGE VERSION\n"
+"POT-Creation-Date: 2001-02-09 01:25+0100\n"
+"PO-Revision-Date: 2001-08-06 15:28GMT\n"
+"Last-Translator: Ludovic Grossard <ludovic.grossard@libertysurf.fr>\n"
+"Language-Team: français <kde-francophone@kde.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 0.9.1\n"
+
+#: index.docbook:11
+#, no-c-format
+msgid "The &ksirtet; Handbook"
+msgstr "Le Manuel de &ksirtet;"
+
+#: index.docbook:13
+#, no-c-format
+msgid "<firstname>Nicolas</firstname> <surname>Hadacek</surname>"
+msgstr "<firstname>Nicolas</firstname> <surname>Hadacek</surname>"
+
+#: index.docbook:19
+#, no-c-format
+msgid "ROLES_OF_TRANSLATORS"
+msgstr ""
+"<othercredit "
+"role=\"translator\"><firstname>Romain</firstname><surname>Quidet</surname>"
+"<affiliation><address><email>rquidet@yahoo.com</email></address>"
+"</affiliation><contrib>Traduction "
+"française</contrib></othercredit><othercredit "
+"role=\"translator\"><firstname>Ludovic</firstname><surname>Grossard</surname>"
+"<affiliation><address><email>ludovic.grossard@libertysurf.fr</email>"
+"</address></affiliation><contrib>Mise à jour</contrib></othercredit>"
+
+#: index.docbook:23 index.docbook:180 index.docbook:185
+#, no-c-format
+msgid "Nicolas Hadacek"
+msgstr "Nicolas Hadacek"
+
+#: index.docbook:32
+#, no-c-format
+msgid ""
+"This program is a clone of the well known game Tetris. You must fit the "
+"falling pieces to form full lines."
+msgstr ""
+"Ce programme est un clone du célèbre jeu Tétris. Vous devez empiler les "
+"pièces qui tombent afin de former des lignes complètes."
+
+#: index.docbook:37
+#, no-c-format
+msgid "<keyword>KDE</keyword>"
+msgstr "<keyword>KDE</keyword>"
+
+#: index.docbook:38
+#, no-c-format
+msgid "game"
+msgstr "jeu"
+
+#: index.docbook:39
+#, no-c-format
+msgid "tetris"
+msgstr "tétris"
+
+#: index.docbook:44
+#, no-c-format
+msgid "Introduction"
+msgstr "Introduction"
+
+#: index.docbook:46
+#, no-c-format
+msgid ""
+"This program is a clone of the well known game <command>Tetris</command>. "
+"You must fit the falling pieces to form full lines. You can rotate and "
+"translate the falling piece. The game ends when no more piece can fall ie "
+"when your incomplete lines reach the top of the board."
+msgstr ""
+"Ce programme est un clone du célèbre jeu <command>Tétris</command>. Vous "
+"devez empiler les pièces qui tombent afin de former des lignes complètes. "
+"Vous pouvez faire tourner et translater les pièces tombantes. Le jeu prend "
+"fin lorsque plus aucune pièce ne peut tomber, c'est-à-dire lorsque vos "
+"lignes incomplètes atteignent le haut de l'écran de jeu."
+
+#: index.docbook:53
+#, no-c-format
+msgid ""
+"Every time you have destroyed 10 lines, you gain a level and the pieces fall "
+"quicker (exactly the piece falls from a line each "
+"<literal>1/(1+level)</literal> second)."
+msgstr ""
+"À chaque fois que vous détruisez 10 lignes, vous accédez au niveau "
+"suivant et les pièces tombent plus rapidement (précisément la pièce "
+"tombe d'une ligne chaque <literal>1/(1+niveau)</literal> seconde)."
+
+#: index.docbook:61
+#, no-c-format
+msgid "How to play"
+msgstr "Comment jouer"
+
+#: index.docbook:64
+#, no-c-format
+msgid "Handling the falling piece"
+msgstr "Contrôler la pièce tombante"
+
+#: index.docbook:66
+#, no-c-format
+msgid ""
+"This game use keyboard to rotate, translate or drop down the falling piece. "
+"The keys are configurable with the menu item "
+"<menuchoice><guimenu>Settings</guimenu> <guimenuitem>Configure Key "
+"Bindings</guimenuitem></menuchoice>."
+msgstr ""
+"Ce jeu utilise le clavier pour tourner, translater ou faire descendre "
+"rapidement la pièce tombante. Les touches sont configurables dans le menu "
+"<menuchoice><guimenu>Configuration</guimenu> <guimenuitem>Raccourcis "
+"clavier...</guimenuitem></menuchoice>."
+
+#: index.docbook:74
+#, no-c-format
+msgid "How to gain points"
+msgstr "Comment gagner des points"
+
+#: index.docbook:76
+#, no-c-format
+msgid "There are two sources of points:"
+msgstr "Il y a deux façons de gagner des points&nbsp;:"
+
+#: index.docbook:78
+#, no-c-format
+msgid ""
+"Dropping down a piece gives a small amount of points which is equal to the "
+"drop height. It is not much each time but better than one can think "
+"perticularly in small levels (when the pieces fall slowly)."
+msgstr ""
+"Placer une pièce donne un petit montant de points qui est égal à la "
+"hauteur du lâcher. Ce n'est pas beaucoup à chaque fois, mais plus "
+"important qu'on ne peut le croire particulièrement dans les niveaux bas "
+"(quand les pièces tombent lentement)."
+
+#: index.docbook:78
+#, no-c-format
+msgid ""
+"The biggest part of the score comes from destroying full lines. It is very "
+"important to note that destroying multiple lines at the same time gives you "
+"much more points. A four-lines destruction is called a "
+"<emphasis>tetris</emphasis> : it gives a maximum amount of points."
+msgstr ""
+"La partie la plus importante du score provient de la destruction des lignes "
+"complètes. Il est très important de noter que détruire plusieurs lignes "
+"en même temps vous donne plus de points. La destruction de quatre lignes "
+"est appelée un <emphasis>tétris</emphasis>&nbsp;: cela donne un montant "
+"maximum de points."
+
+#: index.docbook:78
+#, no-c-format
+msgid ""
+"The points gained are 40 for a one-liner, 100 for two lines, 300 for three "
+"lines and 1200 for a tetris. These numbers must be multiplied by the current "
+"level. Destroying four lines in level 10 gives 12000 points !!"
+msgstr ""
+"Le nombre de points gagnés est 40 pour une ligne, 100 pour deux lignes, 300 "
+"pour trois lignes et 1200 pour un tétris. Ce nombre est multiplié par le "
+"niveau atteint. Détruire quatre lignes au niveau 10 donne 12000 "
+"points&nbsp;!"
+
+#: index.docbook:104
+#, no-c-format
+msgid "Options"
+msgstr "Configuration"
+
+#: index.docbook:106
+#, no-c-format
+msgid ""
+"Menu entry <menuchoice><guimenu>Settings</guimenu><guimenuitem>Configure "
+"KSirtet</guimenuitem></menuchoice> opens the <guilabel>Settings</guilabel> "
+"Dialog."
+msgstr ""
+"L'élément du menu "
+"<menuchoice><guimenu>Configuration</guimenu><guimenuitem>Configurer "
+"KSirtet...</guimenuitem></menuchoice> ouvre la boîte de dialogue de "
+"<guilabel>Configuration</guilabel>."
+
+#: index.docbook:112
+#, no-c-format
+msgid "Show tile's shadow"
+msgstr "Afficher l'ombre des pièces"
+
+#: index.docbook:112
+#, no-c-format
+msgid ""
+"Shows/hides the shadow of the falling piece at the bottom of the board. This "
+"shadow can help to avoid position error when dropping the piece."
+msgstr ""
+"Montre/cache l'ombre de la pièce tombante en bas de l'écran de jeu. Cette "
+"ombre peut aider à éviter les erreurs de positionnement quand on lâche la "
+"pièce."
+
+#: index.docbook:112
+#, no-c-format
+msgid "Show next tile"
+msgstr "Afficher la pièce suivante"
+
+#: index.docbook:112
+#, no-c-format
+msgid "Shows/hides the display of the next piece to come."
+msgstr "Montre/cache l'affichage de la pièce à venir."
+
+#: index.docbook:112
+#, no-c-format
+msgid "Enable animations"
+msgstr "Activer les animations"
+
+#: index.docbook:112
+#, no-c-format
+msgid "<para> </para>"
+msgstr "<para> </para>"
+
+#: index.docbook:112
+#, no-c-format
+msgid "Block Size"
+msgstr "Taille des blocs"
+
+#: index.docbook:112
+#, no-c-format
+msgid ""
+"Lets you change the size of the blocks (and increases the playing field to "
+"match. The default size is 15 (pixels.)"
+msgstr ""
+"Vous permet d'augmenter la taille des blocs (et augmente la zone de jeux. La "
+"valeur par défaut est 15 (pixels))."
+
+#: index.docbook:156
+#, no-c-format
+msgid "Multiplayer"
+msgstr "Multijoueur"
+
+#: index.docbook:158
+#, no-c-format
+msgid ""
+"The multiplayer option allows to play with others players on the same "
+"computer or/and on different computers situated on the net. You can also "
+"play against an <acronym>AI</acronym>"
+" (artificial intelligence) player which is currently not very good."
+msgstr ""
+"L'option multijoueur permet de jouer avec d'autres joueurs sur le même "
+"ordinateur ou/et avec d'autres ordinateurs sur l'internet. Vous pouvez aussi "
+"jouer contre un joueur <acronym>IA</acronym>"
+" (intelligence artificielle) qui n'est pour l'instant pas très fort."
+
+#: index.docbook:165
+#, no-c-format
+msgid ""
+"Basically when destroying lines, a player sends garbage at the bottom of the "
+"game of his next opponent (nothing for a line desctroyed, one garbage line "
+"for two lines desctroyed and so on)."
+msgstr ""
+"Quand il détruit des lignes, un joueur les envoie en bas du jeu de son "
+"adversaire (rien pour une ligne détruite, une ligne pour deux lignes "
+"détruites et ainsi de suite)."
+
+#: index.docbook:174
+#, no-c-format
+msgid "Credits and Licenses"
+msgstr "Remerciements et licence"
+
+#: index.docbook:177
+#, no-c-format
+msgid "Developers"
+msgstr "Développeurs"
+
+#: index.docbook:179
+#, no-c-format
+msgid "<literal>Erik Eng</literal> - Wrote the generic tetris code"
+msgstr ""
+"<literal>Erik Eng</literal> - a écrit la plus grande part du code brut de "
+"tétris"
+
+#: index.docbook:184
+#, no-c-format
+msgid "Authors"
+msgstr "Auteurs"
+
+#: index.docbook:186
+#, no-c-format
+msgid ""
+"<literal><ulink url=\"mailto:rwilliams@kde.org\">Robert "
+"Williams</ulink></literal> - Editor"
+msgstr ""
+"<literal><ulink url=\"mailto:rwilliams@kde.org\">Robert "
+"Williams</ulink></literal> - éditeur"
+
+#: index.docbook:188
+#, no-c-format
+msgid "CREDIT_FOR_TRANSLATORS"
+msgstr ""
+"<para>Traduction française par Romain Quidet "
+"<email>rquidet@yahoo.com</email></para><para>Mise à jour de la traduction "
+"par Ludovic Grossard <email>ludovic.grossard@libertysurf.fr</email></para>"
