--- a/trabalhoP/PT/kasteroids.po
+++ b/trabalhoP/PT/kasteroids.po
@@ -1,9 +1,173 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
-<title>403 Forbidden</title>
-</head><body>
-<h1>Forbidden</h1>
-<p>You don't have permission to access /~jj/plc-17/PO/PT/kasteroids.po
-on this server.<br />
-</p>
-</body></html>
+msgid ""
+msgstr ""
+"Project-Id-Version: kasteroids\n"
+"POT-Creation-Date: 2001-12-25 02:55+0100\n"
+"PO-Revision-Date: 2001-01-10 22:10-0300\n"
+"Last-Translator: Elvis Pfützenreuter <epx@conectiva.com>\n"
+"Language-Team: Brazilian Portugueses <kde-i18n-pt_BR@kde.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 0.7.1\n"
+
+#: main.cpp:25
+msgid "KDE Space Game"
+msgstr "Jogo espacial do KDE"
+
+#: main.cpp:30
+msgid "KAsteroids"
+msgstr "Asteroids"
+
+#: preferences.cpp:18
+msgid "KAsteroids Preferences"
+msgstr "Preferências do KAsteroids"
+
+#: preferences.cpp:22
+msgid "Start new game with"
+msgstr "Iniciar noveo jogo"
+
+#: preferences.cpp:24
+#, fuzzy
+msgid " ships."
+msgstr "Naves"
+
+#: preferences.cpp:33
+msgid "Show highscores on Game Over"
+msgstr "Mostrar escores mais altos ao final do jogo"
+
+#: preferences.cpp:34
+msgid "Player can destroy Powerups"
+msgstr "O jogador pode destruir os Powerups"
+
+#: toplevel.cpp:121
+msgid "Score"
+msgstr "Pontuação"
+
+#: toplevel.cpp:135
+msgid "Level"
+msgstr "Nível"
+
+#: toplevel.cpp:149
+msgid "Ships"
+msgstr "Naves"
+
+#: toplevel.cpp:251
+msgid "Fuel"
+msgstr "Combustível"
+
+#: toplevel.cpp:270
+msgid "Thrust"
+msgstr "Empuxo"
+
+#: toplevel.cpp:272
+msgid "Rotate Left"
+msgstr "Rotacionar esquerda"
+
+#: toplevel.cpp:274
+msgid "Rotate Right"
+msgstr "Rotacionar direita"
+
+#: toplevel.cpp:276
+msgid "Shoot"
+msgstr "Atirar"
+
+#: toplevel.cpp:278
+msgid "Teleport"
+msgstr "Teletrasnporte"
+
+#: toplevel.cpp:280
+msgid "Brake"
+msgstr "Freio"
+
+#: toplevel.cpp:282
+msgid "Shield"
+msgstr "Defletor"
+
+#: toplevel.cpp:284
+msgid "Pause"
+msgstr "Pausa"
+
+#: toplevel.cpp:286
+msgid "Launch"
+msgstr "Lançar"
+
+#: toplevel.cpp:495
+msgid "KAsteroids is paused"
+msgstr "KAsteroids aguardando"
+
+#: toplevel.cpp:496
+msgid "Paused"
+msgstr "Interrompido"
+
+#: toplevel.cpp:530
+msgid "Press %1 to launch."
+msgstr "Pressione %1 para lançar."
+
+#: toplevel.cpp:552
+msgid "Ship Destroyed. Press %1 to launch."
+msgstr "Nave Destruída.  Pressione %1 para continuar."
+
+#: toplevel.cpp:558
+msgid "Game Over!"
+msgstr "Jogo Terminado!"
+
+#: toplevel.cpp:636
+#, fuzzy
+msgid ""
+"Game Over\n"
+"\n"
+"Shots fired:\t%1\n"
+"  Hit:\t%2\n"
+"  Missed:\t%3\n"
+"Hit ratio:\t%4 %\t\t"
+msgstr ""
+"condições do jogo kasteroids:\n"
+"\n"
+" Pontos:\t%1\n"
+" Nível:\t\t%2\n"
+" Tiros:\t%3\n"
+" o Acertos:\t%4\n"
+" o Erros:\t%5\n"
+" Proporção de acertos:\t%6 %%\t\t"
+
+#: _translatorinfo.cpp:1
+msgid ""
+"_: NAME OF TRANSLATORS\n"
+"Your names"
+msgstr "Elvis Pfützenreuter"
+
+#: _translatorinfo.cpp:3
+msgid ""
+"_: EMAIL OF TRANSLATORS\n"
+"Your emails"
+msgstr "epx@conectiva.com.br"
+
+#~ msgid "Highscores"
+#~ msgstr "Escores mais altos"
+
+#~ msgid "Well done!"
+#~ msgstr "Feito!"
+
+#~ msgid ""
+#~ "Congratulations!\n"
+#~ "You made it to the highscores list!\n"
+#~ "Please enter your name:\n"
+#~ msgstr ""
+#~ "Parabéns!\n"
+#~ "Você conseguiu os escores mais altos da lista\n"
+#~ "Escreva seu nome;\n"
+
+#~ msgid "No Name"
+#~ msgstr "Sem nome"
+
+#~ msgid "Name"
+#~ msgstr "Nome"
+
+#~ msgid "Show &Highscores..."
+#~ msgstr "Mostrar &Escores mais altos..."
+
+#~ msgid "Game stats"
+#~ msgstr "Condições do jogo"
+
+#~ msgid "Show stats on Game Over"
+#~ msgstr "Mostrar estatísticas ao final do jogo"
