--- a/trabalhoP/PT/kpoker.po
+++ b/trabalhoP/PT/kpoker.po
@@ -1,9 +1,311 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
-<title>403 Forbidden</title>
-</head><body>
-<h1>Forbidden</h1>
-<p>You don't have permission to access /~jj/plc-17/PO/PT/kpoker.po
-on this server.<br />
-</p>
-</body></html>
+msgid ""
+msgstr ""
+"Project-Id-Version: kpoker\n"
+"POT-Creation-Date: 2002-01-25 03:25+0100\n"
+"PO-Revision-Date: 2001-01-10 22:09-0300\n"
+"Last-Translator: Elvis Pfützenreuter <epx@conectiva.com>\n"
+"Language-Team: Brazilian Portugueses <kde-i18n-pt_BR@kde.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 0.7.1\n"
+
+#: kpoker.cpp:283
+msgid "Clicking on draw means you adjust your bet"
+msgstr ""
+
+#: kpoker.cpp:285
+msgid "Clicking on draw means you are out"
+msgstr ""
+
+#: kpoker.cpp:327 kpoker.cpp:550 somestuff.cpp:79
+msgid "&Draw!"
+msgstr "&Dar as cartas !"
+
+#: kpoker.cpp:384 newgamedlg.cpp:114
+msgid "You"
+msgstr "Você"
+
+#: kpoker.cpp:426 kpoker.cpp:468
+msgid "Nobody"
+msgstr "Ninguém"
+
+#: kpoker.cpp:432 kpoker.cpp:470 kpoker.cpp:689 kpoker.cpp:701 kpoker.cpp:889
+msgid "Nothing"
+msgstr "Nada"
+
+#: kpoker.cpp:460
+#, c-format
+msgid "Pot: %1"
+msgstr "Mão: %1"
+
+#: kpoker.cpp:594 somestuff.cpp:91
+#, c-format
+msgid "You won %1"
+msgstr "Ganhou %1"
+
+#: kpoker.cpp:601
+msgid "%1 won %2"
+msgstr "%1 ganhou %2"
+
+#: kpoker.cpp:660
+msgid "&See!"
+msgstr "&Ver!"
+
+#: kpoker.cpp:691
+msgid "One Pair"
+msgstr "Um Par"
+
+#: kpoker.cpp:692
+msgid "Two Pairs"
+msgstr "Dois Pares"
+
+#: kpoker.cpp:693
+msgid "3 of a kind"
+msgstr "3 do mesmo tipo"
+
+#: kpoker.cpp:694
+msgid "Full House"
+msgstr "Full House"
+
+#: kpoker.cpp:695
+msgid "4 of a kind"
+msgstr "4 do mesmo tipo"
+
+#: kpoker.cpp:696
+msgid "Straight"
+msgstr "Straight"
+
+#: kpoker.cpp:697
+msgid "Flush"
+msgstr "Flush"
+
+#: kpoker.cpp:698
+msgid "Straight Flush"
+msgstr "Straight Flush"
+
+#: kpoker.cpp:699
+msgid "Royal Flush"
+msgstr "Royal Flush"
+
+#: kpoker.cpp:713
+msgid "You Lost"
+msgstr "Perdeu"
+
+#: kpoker.cpp:713
+msgid ""
+"Oops, you went bankrupt.\n"
+"Starting a new game.\n"
+msgstr ""
+"Opa, você foi à falência.\n"
+"Inciando um novo jogo.\n"
+
+#: kpoker.cpp:771
+msgid "You won %1!"
+msgstr "Ganhou %1!"
+
+#: kpoker.cpp:774
+msgid "Game Over"
+msgstr "Jogo Terminado"
+
+#: kpoker.cpp:880
+msgid ""
+"You are the only player with money!\n"
+"Switching to one player rules..."
+msgstr ""
+"Você é o único jogador com dinheiro!\n"
+"Mudando para as regras de um jogador..."
+
+#: kpoker.cpp:881
+msgid "You Won"
+msgstr "Ganhou"
+
+#: top.cpp:82
+msgid "Soun&d"
+msgstr "&Som"
+
+#: top.cpp:86
+msgid "&Blinking Cards"
+msgstr "Cartas &piscantes"
+
+#: top.cpp:90
+#, fuzzy
+msgid "&Adjust Bet is Default"
+msgstr "&Ajuste do lance é padrão"
+
+#: top.cpp:179
+msgid "Do you want to save this game?"
+msgstr "Deseja salvar este jogo?"
+
+#: top.cpp:193
+msgid "Last hand: "
+msgstr "Mão Anterior"
+
+#: top.cpp:195
+msgid "Last winner: "
+msgstr "Último ganhador:"
+
+#: top.cpp:203
+msgid "Click a card to hold it"
+msgstr "Clique numa carta para mantê-la"
+
+#: main.cpp:25
+#, fuzzy
+msgid "KDE Poker Game"
+msgstr "KDE Jodo de cartas"
+
+#: main.cpp:29
+msgid "KPoker"
+msgstr "KPoker"
+
+#: main.cpp:32
+msgid ""
+"For a full list of credits see helpfile\n"
+"Any suggestions, bug reports etc. are welcome"
+msgstr ""
+"Para um a lista completa de créditos veja arquivo de ajuda\n"
+"Sugestões, relatórios de bugs etc. são bem-vindos."
+
+#: main.cpp:35
+msgid "Current maintainer"
+msgstr "Mantenedor atual"
+
+#: main.cpp:37
+msgid "Original author"
+msgstr "Autor original"
+
+#: somestuff.cpp:50
+msgid "Draw"
+msgstr "Dar as cartas !"
+
+#: somestuff.cpp:52
+msgid "Exchange Card 1"
+msgstr "Trocar carta 1"
+
+#: somestuff.cpp:54
+msgid "Exchange Card 2"
+msgstr "Trocar carta 2"
+
+#: somestuff.cpp:56
+msgid "Exchange Card 3"
+msgstr "Trocar carta 3"
+
+#: somestuff.cpp:58
+msgid "Exchange Card 4"
+msgstr "Trocar carta 4"
+
+#: somestuff.cpp:60
+msgid "Exchange Card 5"
+msgstr "Trocar carta 5"
+
+#: somestuff.cpp:129
+msgid "draw new cards"
+msgstr "trocar novas cartas"
+
+#: somestuff.cpp:130
+msgid "the current pot"
+msgstr "a rodada atual"
+
+#: betbox.cpp:50
+msgid "Adjust Bet"
+msgstr "Ajustar aposta"
+
+#: betbox.cpp:51
+msgid "Fold"
+msgstr "Dobrar"
+
+#: optionsdlg.cpp:44
+msgid "All changes will be activated in the next round"
+msgstr "Todas as mudanças serão ativadas na próxima rodada"
+
+#: optionsdlg.cpp:47
+msgid "Draw Delay"
+msgstr ""
+
+#: optionsdlg.cpp:52
+msgid "Maximal bet:"
+msgstr "Aposta máxima:"
+
+#: optionsdlg.cpp:56
+msgid "Minimal bet:"
+msgstr "Aposta mínima:"
+
+#: playerbox.cpp:54
+msgid "Held"
+msgstr "Conservar"
+
+#: playerbox.cpp:83 playerbox.cpp:122
+#, c-format
+msgid "Money of %1"
+msgstr "Dinheiro do %1"
+
+#: playerbox.cpp:103
+#, c-format
+msgid "Cash: %1"
+msgstr "Dinheiro: %1"
+
+#: playerbox.cpp:108
+#, c-format
+msgid "Bet: %1"
+msgstr "Aposta: %1"
+
+#: playerbox.cpp:111
+#, c-format
+msgid "Cash per round: %1"
+msgstr "Dinheiro por rodada: %1"
+
+#: playerbox.cpp:115
+msgid "Out"
+msgstr "Fora"
+
+#: newgamedlg.cpp:48
+msgid "Try loading a game"
+msgstr "Tentar carregar um jogo"
+
+#: newgamedlg.cpp:52
+msgid "The following values are used if loading from config fails"
+msgstr "Os valores a seguir são usados se a carga a partir de config falhar"
+
+#: newgamedlg.cpp:61
+msgid "How many players do you want?"
+msgstr "Quantos jogadores?"
+
+#: newgamedlg.cpp:65
+msgid "Your Name"
+msgstr "Seu nome"
+
+#: newgamedlg.cpp:70
+msgid "Start money of the players"
+msgstr "Iniciar apostas"
+
+#: newgamedlg.cpp:75
+msgid "The names of your enemies"
+msgstr "Os nomes de seus oponentes"
+
+#: newgamedlg.cpp:81
+msgid "Show this dialog every time on startup"
+msgstr "Sempre mostrar este diálogo no início"
+
+#: newgamedlg.cpp:117
+#, c-format
+msgid "Computer %1"
+msgstr "Computador %1"
+
+#: newgamedlg.cpp:163
+msgid "Player"
+msgstr "Jogador"
+
+#: _translatorinfo.cpp:1
+msgid ""
+"_: NAME OF TRANSLATORS\n"
+"Your names"
+msgstr "Elvis Pfützenreuter"
+
+#: _translatorinfo.cpp:3
+msgid ""
+"_: EMAIL OF TRANSLATORS\n"
+"Your emails"
+msgstr "epx@conectiva.com.br"
+
+#~ msgid "Configure &card decks"
+#~ msgstr "Configurar &baralhos"
