--- a/trabalhoP/PT/kreversi.po
+++ b/trabalhoP/PT/kreversi.po
@@ -1,9 +1,422 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
-<title>403 Forbidden</title>
-</head><body>
-<h1>Forbidden</h1>
-<p>You don't have permission to access /~jj/plc-17/PO/PT/kreversi.po
-on this server.<br />
-</p>
-</body></html>
+msgid ""
+msgstr ""
+"Project-Id-Version: kuser\n"
+"POT-Creation-Date: 2002-01-27 03:54+0100\n"
+"PO-Revision-Date: 2001-01-10 22:10-0300\n"
+"Last-Translator: Elvis Pfützenreuter <epx@conectiva.com>\n"
+"Language-Team: Brazilian Portugueses <kde-i18n-pt_BR@kde.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 0.7.1\n"
+
+#: main.cpp:52
+msgid "KDE Board Game"
+msgstr "Jogo de tabuleiro do KDE"
+
+#: main.cpp:56
+msgid "KReversi"
+msgstr "KReversi"
+
+#: app.cpp:202 app.cpp:560
+msgid ""
+"A problem with the sound server occured!\n"
+"Cannot enable sound support."
+msgstr ""
+"Ocorreu um problema com o servidor de som!\n"
+"Não foi possível ativar o suporte a som."
+
+#: app.cpp:224
+#, fuzzy
+msgid "&Load Game"
+msgstr "&Carregar jogo"
+
+#: app.cpp:225
+#, fuzzy
+msgid "&Save Game"
+msgstr "&Salvar jogo"
+
+#: app.cpp:230
+#, fuzzy
+msgid "Get &Hint"
+msgstr "&Dica"
+
+#: app.cpp:232
+#, fuzzy
+msgid "&Stop Thinking"
+msgstr "&Parar de pensar"
+
+#: app.cpp:233
+msgid "&Continue"
+msgstr "&Continuar"
+
+#: app.cpp:235
+#, fuzzy
+msgid "&Undo Move"
+msgstr "&Desfazer jogada"
+
+#: app.cpp:236
+#, fuzzy
+msgid "Switch Si&des"
+msgstr "Mudar de &lado"
+
+#: app.cpp:238
+msgid "Hall Of &Fame..."
+msgstr "&Pódio..."
+
+#: app.cpp:244
+msgid "Level 1 (Wimp)"
+msgstr "Nível 1 (Medroso)"
+
+#: app.cpp:245
+msgid "Level 2 (Beginner)"
+msgstr "Nível 2 (Iniciante)"
+
+#: app.cpp:246
+msgid "Level 3 (Novice)"
+msgstr "Nível 3 (Novato)"
+
+#: app.cpp:247
+msgid "Level 4 (Average)"
+msgstr "Nível 4 (Médio)"
+
+#: app.cpp:248
+msgid "Level 5 (Good)"
+msgstr "Nível 5 (Bom)"
+
+#: app.cpp:249
+msgid "Level 6 (Expert)"
+msgstr "Nível 6 (Expert)"
+
+#: app.cpp:250
+msgid "Level 7 (Master)"
+msgstr "Nível 7 (Mestre)"
+
+#: app.cpp:251
+msgid "Skill"
+msgstr "Perícia"
+
+#: app.cpp:253
+#, fuzzy
+msgid "&Shrink Board"
+msgstr "&Diminuir tabuleiro"
+
+#: app.cpp:254
+#, fuzzy
+msgid "&Enlarge Board"
+msgstr "&Aumentar tabuleiro"
+
+#: app.cpp:258
+#, fuzzy
+msgid "&Half Size"
+msgstr "&Metade do tamanho"
+
+#: app.cpp:259
+#, c-format
+msgid "60%"
+msgstr "60%"
+
+#: app.cpp:260
+#, c-format
+msgid "80%"
+msgstr "80%"
+
+#: app.cpp:261
+#, fuzzy
+msgid "D&efault Size"
+msgstr "Tamanho padrã&o"
+
+#: app.cpp:262
+#, c-format
+msgid "120%"
+msgstr "120%"
+
+#: app.cpp:263
+#, c-format
+msgid "140%"
+msgstr "140%"
+
+#: app.cpp:264
+#, c-format
+msgid "160%"
+msgstr "160%"
+
+#: app.cpp:265
+#, c-format
+msgid "180%"
+msgstr "180%"
+
+#: app.cpp:266
+#, fuzzy
+msgid "&Double Size"
+msgstr "&Duplicar tamanho"
+
+#: app.cpp:267
+#, fuzzy
+msgid "Set Size"
+msgstr "Especificar tamanho"
+
+#: app.cpp:270
+#, fuzzy
+msgid "Select &Background Color..."
+msgstr "Escolher cor de &fundo..."
+
+#: app.cpp:276
+msgid "none"
+msgstr "nenhum"
+
+#: app.cpp:288
+msgid "More..."
+msgstr "Mais..."
+
+#: app.cpp:296
+#, fuzzy
+msgid "Select Background Image"
+msgstr "Escolher imagem de fundo"
+
+#: app.cpp:297
+msgid "&Grayscale"
+msgstr "&Escala de cinza"
+
+#: app.cpp:299
+msgid "&Animations"
+msgstr "&Animações"
+
+#: app.cpp:303
+msgid "1 (fastest)"
+msgstr "1 (rapidíssimo)"
+
+#: app.cpp:309
+msgid "10 (slowest)"
+msgstr "10 (lentíssimo)"
+
+#: app.cpp:310
+#, fuzzy
+msgid "Animation Speed"
+msgstr "Velocidade da Animação"
+
+#: app.cpp:313
+msgid "S&ound"
+msgstr "S&om"
+
+#: app.cpp:317
+msgid "Version "
+msgstr "Versão "
+
+#: app.cpp:319
+msgid ""
+"\n"
+"(c) 1997 Mario Weilguni <mweilguni@sime.com>\n"
+"\n"
+"This program is free software\n"
+"published under the GNU General\n"
+"Public License (take a look\n"
+"into help for details)\n"
+"\n"
+"Thanks to:\n"
+"\tMats Luthman for the game engine\n"
+"\t(I've ported it from his JAVA applet)\n"
+"\n"
+"\tStephan Kulow\n"
+"\tfor comments and bugfixes\n"
+"\n"
+"\tArne Klaassen\n"
+"\t for the raytraced chips"
+msgstr ""
+"\n"
+"(c) 1997 Mario Weilguni <mweilguni@sime.com>\n"
+"\n"
+"Este programa é software livre\n"
+"publicado sob os termos da Licença\n"
+"Pública Geral GNU\n"
+"(veja a ajuda para obter detalhes)\n"
+"\n"
+"Agradecimentos:\n"
+"\tMats Luthman pelo núcleo do jogo\n"
+"\t(transferido do  applet JAVA)\n"
+"\n"
+"\tStephan Kulow\n"
+"\tpelos comentários e correções\n"
+"\tArne Klaassen\n"
+"\tpelas imagens raytraced"
+
+#: app.cpp:372
+msgid "Stop thinking"
+msgstr "Parar de pensar"
+
+#: app.cpp:374
+msgid "Undo move"
+msgstr "Desfazer jogada"
+
+#: app.cpp:376
+msgid "Shrink board"
+msgstr "Diminuir tabuleiro"
+
+#: app.cpp:378
+msgid "Enlarge board"
+msgstr "Aumentar tabuleiro"
+
+#: app.cpp:380
+msgid "Get hint"
+msgstr "Pedir dica"
+
+#: app.cpp:382
+msgid "Get help"
+msgstr "Pedir ajuda"
+
+#: app.cpp:389
+msgid "XXXXX's turn"
+msgstr "turno de XXXXX's"
+
+#: app.cpp:390
+msgid "You (XXXXX): 88"
+msgstr "Você (XXXXX): 88"
+
+#: app.cpp:391
+msgid "Computer (XXXXX): 88"
+msgstr "Computador (XXXXX): 88"
+
+#: app.cpp:439
+msgid "Game saved."
+msgstr "Jogo gravado."
+
+#: app.cpp:604
+#, c-format
+msgid "You (blue): %1"
+msgstr "Você (azul): %1"
+
+#: app.cpp:605
+#, c-format
+msgid "Computer (red): %1"
+msgstr "Computador (vermelho): %1"
+
+#: app.cpp:607
+#, c-format
+msgid "You (red): %1"
+msgstr "Você (vermelho): %1"
+
+#: app.cpp:608
+#, c-format
+msgid "Computer (blue): %1"
+msgstr "Computador (azul): %1"
+
+#: app.cpp:652
+msgid "End of game"
+msgstr "Fim de jogo"
+
+#: app.cpp:662
+msgid ""
+"Game is drawn!\n"
+"\n"
+"You     : %1\n"
+"Computer: %2"
+msgstr ""
+"O jogo está empatado!\n"
+"\n"
+"Você .....: %1\n"
+"Computador: %2"
+
+#: app.cpp:663 app.cpp:675 app.cpp:695
+msgid "Game ended"
+msgstr "Jogo terminado"
+
+#: app.cpp:673
+#, fuzzy
+msgid ""
+"Congratulations, you have won!\n"
+"\n"
+"You     : %1\n"
+"Computer: %2\n"
+"Your rating %3%"
+msgstr ""
+"Parabéns, ganhou!\n"
+"\n"
+"Você .....: %1\n"
+"Computador: %2\n"
+"A sua posição %3%%"
+
+#: app.cpp:693
+msgid ""
+"You have lost the game!\n"
+"\n"
+"You     : %1\n"
+"Computer: %2"
+msgstr ""
+"Você perdeu o jogo!\n"
+"\n"
+"Você .....: %1\n"
+"Computador: %2"
+
+#: app.cpp:704
+msgid "Red's turn"
+msgstr "Vez do vermelho"
+
+#: app.cpp:706
+msgid "Blue's turn"
+msgstr "Vez do azul"
+
+#: app.cpp:845
+#, fuzzy
+msgid "KReversi: Hall of Fame"
+msgstr "KReversi: Pódio"
+
+#: app.cpp:849
+msgid "KReversi: Hall Of Fame"
+msgstr "KReversi: Pódio"
+
+#: app.cpp:870
+msgid "Rank"
+msgstr "Posição"
+
+#: app.cpp:874
+msgid "Name"
+msgstr "Nome"
+
+#: app.cpp:878
+msgid "Color"
+msgstr "Cor"
+
+#: app.cpp:882
+msgid "Score"
+msgstr "Pontuação"
+
+#: app.cpp:886
+msgid "Rating"
+msgstr "Classificação"
+
+#: app.cpp:901
+msgid "blue"
+msgstr "azul"
+
+#: app.cpp:903
+msgid "red"
+msgstr "vermelho"
+
+#: app.cpp:978
+msgid ""
+"You've made in into the \"Hall Of Fame\".Type in\n"
+"your name so mankind will always remember\n"
+"your cool rating."
+msgstr ""
+"Conseguiu entrar no \"Pódio\". Introduza o\n"
+"seu nome para que a humanidade se lembre\n"
+"sempre da sua posição."
+
+#: app.cpp:981
+msgid "Your name:"
+msgstr "O seu nome:"
+
+#: _translatorinfo.cpp:1
+msgid ""
+"_: NAME OF TRANSLATORS\n"
+"Your names"
+msgstr "Elvis Pfützenreuter"
+
+#: _translatorinfo.cpp:3
+msgid ""
+"_: EMAIL OF TRANSLATORS\n"
+"Your emails"
+msgstr "epx@conectiva.com.br"
+
+#~ msgid "&New game"
+#~ msgstr "&Novo jogo"
