--- a/trabalhoP/PT/ksnake.po
+++ b/trabalhoP/PT/ksnake.po
@@ -1,9 +1,194 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
-<title>403 Forbidden</title>
-</head><body>
-<h1>Forbidden</h1>
-<p>You don't have permission to access /~jj/plc-17/PO/PT/ksnake.po
-on this server.<br />
-</p>
-</body></html>
+msgid ""
+msgstr ""
+"Project-Id-Version: ksnake\n"
+"POT-Creation-Date: 2002-02-10 02:45+0100\n"
+"PO-Revision-Date: 2001-01-10 22:10-0300\n"
+"Last-Translator: Elvis Pfützenreuter <epx@conectiva.com>\n"
+"Language-Team: Brazilian Portugueses <kde-i18n-pt_BR@kde.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 0.7.1\n"
+
+#: _translatorinfo.cpp:1
+msgid ""
+"_: NAME OF TRANSLATORS\n"
+"Your names"
+msgstr "Elvis Pfützenreuter"
+
+#: _translatorinfo.cpp:3
+msgid ""
+"_: EMAIL OF TRANSLATORS\n"
+"Your emails"
+msgstr "epx@conectiva.com.br"
+
+#: game.cpp:43
+msgid "KDE Snake Race Game"
+msgstr "Corrida de Cobras"
+
+#: game.cpp:49 rattler.cpp:328
+msgid "Snake Race"
+msgstr "Corrida de Cobras"
+
+#: game.cpp:79
+msgid "&Pause"
+msgstr "&Pausa"
+
+#: game.cpp:81
+msgid "&Show Highscores..."
+msgstr "&Pódio..."
+
+#: game.cpp:85
+msgid "Beginner"
+msgstr "Bisonho"
+
+#: game.cpp:87
+msgid "Intermediate"
+msgstr "Intermediário"
+
+#: game.cpp:89
+msgid "Advanced"
+msgstr "Avançado"
+
+#: game.cpp:91
+msgid "Expert"
+msgstr "Mestre"
+
+#: game.cpp:96
+msgid "&Balls"
+msgstr "&Bolas"
+
+#: game.cpp:105
+msgid "Balls AI"
+msgstr "IA das Bolas"
+
+#: game.cpp:109
+msgid "Dumb"
+msgstr ""
+
+#: game.cpp:110 game.cpp:122
+msgid "Killer"
+msgstr ""
+
+#: game.cpp:113
+msgid "&Snakes"
+msgstr "&Cobras"
+
+#: game.cpp:117
+msgid "Snakes AI"
+msgstr "IA das Cobras"
+
+#: game.cpp:120
+msgid "Random"
+msgstr ""
+
+#: game.cpp:121
+msgid "Eater"
+msgstr ""
+
+#: game.cpp:125
+#, fuzzy
+msgid "Change Keys..."
+msgstr "Mudar teclas..."
+
+#: game.cpp:127
+msgid "Starting Room..."
+msgstr "Sala de início ..."
+
+#: game.cpp:130
+#, fuzzy
+msgid "Select Background Color..."
+msgstr "Selecionar cor de fundo..."
+
+#: game.cpp:138
+msgid "none"
+msgstr "nenhum"
+
+#: game.cpp:149
+#, fuzzy
+msgid "Select Background Pixmap"
+msgstr "Selecionar pixmap de fundo"
+
+#: game.cpp:316
+msgid "KSnakeRace"
+msgstr "Corrida de Cobras"
+
+#: game.cpp:318
+msgid "(c) 1997-2000, Your Friendly KSnake Developers"
+msgstr "(c) 1997-2000, Os amigáveis desenvolvedores"
+
+#: keys.cpp:29
+msgid "Defaults"
+msgstr "Padrões"
+
+#: keys.cpp:84
+msgid "Change Direction Keys"
+msgstr "Mudar teclas de direção"
+
+#: keys.cpp:97
+msgid "Undefined key"
+msgstr "Tecla indefinida"
+
+#: keys.cpp:154 keys.cpp:164
+msgid "Up"
+msgstr "Acima"
+
+#: keys.cpp:155 keys.cpp:167
+msgid "Down"
+msgstr "Abaixo"
+
+#: pixServer.cpp:171
+msgid ""
+"error loading %1, aborting\n"
+msgstr ""
+"erro ao carregar %1, abortando\n"
+
+#: rattler.cpp:254
+msgid ""
+"Game Paused\n"
+" Press F3 to resume\n"
+msgstr ""
+"Jogo Parado\n"
+" Pressione F3 para continuar\n"
+
+#: rattler.cpp:327
+msgid ""
+"A game is already started.\n"
+"Start a new one?\n"
+msgstr ""
+"O jogo já foi iniciado\n"
+"Começar um novo jogo ?\n"
+
+#: score.cpp:32 score.cpp:62
+msgid "Snake Race High Scores"
+msgstr "Pódio da Corrida de Cobras"
+
+#: score.cpp:36
+msgid "Hall of Fame"
+msgstr "Pódio"
+
+#: score.cpp:40
+msgid "Today's High Scores"
+msgstr "Maiores pontuações de Hoje"
+
+#: score.cpp:63
+msgid ""
+"you have achieved a high score!\n"
+" please enter your name"
+msgstr ""
+"você atingiu uma grande pontuação!\n"
+" Por favor digite seu nome"
+
+#: startroom.cpp:21
+msgid "Snake Race Starting Room"
+msgstr "Sala de início da Corrida de Cobras"
+
+#: startroom.cpp:39
+msgid "Starting Room"
+msgstr "Sala de início"
+
+#~ msgid "Left"
+#~ msgstr "Esquerda"
+
+#~ msgid "Right"
+#~ msgstr "Direita"
