--- a/trabalhoP/PT/ksokoban.po
+++ b/trabalhoP/PT/ksokoban.po
@@ -1,9 +1,218 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
-<title>403 Forbidden</title>
-</head><body>
-<h1>Forbidden</h1>
-<p>You don't have permission to access /~jj/plc-17/PO/PT/ksokoban.po
-on this server.<br />
-</p>
-</body></html>
+msgid ""
+msgstr ""
+"Project-Id-Version: ksokoban\n"
+"POT-Creation-Date: 2002-02-10 02:45+0100\n"
+"PO-Revision-Date: 2001-01-10 22:09-0300\n"
+"Last-Translator: Elvis Pfützenreuter <epx@conectiva.com>\n"
+"Language-Team: Brazilian Portugueses <kde-i18n-pt_BR@kde.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 0.7.1\n"
+
+#: InternalCollections.C:45
+msgid "Sasquatch"
+msgstr "Sasquatch"
+
+#: InternalCollections.C:49
+msgid "Mas Sasquatch"
+msgstr "Mas Sasquatch"
+
+#: InternalCollections.C:53
+msgid "Sasquatch III"
+msgstr "Sasquatch III"
+
+#: InternalCollections.C:57
+msgid "Microban (easy)"
+msgstr "Microban (fácil)"
+
+#: InternalCollections.C:61
+#, fuzzy
+msgid "Sasquatch IV"
+msgstr "Sasquatch III"
+
+#: MainWindow.C:91
+#, fuzzy
+msgid "&Load Levels..."
+msgstr "&Carregar níveis..."
+
+#: MainWindow.C:93
+#, fuzzy
+msgid "&Next Level"
+msgstr "&Próximo Nível"
+
+#: MainWindow.C:95
+#, fuzzy
+msgid "&Previous Level"
+msgstr "Nível &Anterior"
+
+#: MainWindow.C:97
+#, fuzzy
+msgid "Re&start Level"
+msgstr "Re&iniciar nível"
+
+#: MainWindow.C:100
+#, fuzzy
+msgid "&Level Collection"
+msgstr "Coleção de &Níveis"
+
+#: MainWindow.C:115
+msgid "&Slow"
+msgstr "&Devagar"
+
+#: MainWindow.C:116
+msgid "&Medium"
+msgstr "&Médio"
+
+#: MainWindow.C:117
+msgid "&Fast"
+msgstr "&Rápido"
+
+#: MainWindow.C:118
+msgid "&Off"
+msgstr "&Desligado"
+
+#: MainWindow.C:121
+msgid "&Animation"
+msgstr "&Animação"
+
+#: MainWindow.C:126 MainWindow.C:128 MainWindow.C:130 MainWindow.C:132
+#: MainWindow.C:134 MainWindow.C:136 MainWindow.C:138 MainWindow.C:140
+#: MainWindow.C:142 MainWindow.C:144 MainWindow.C:151 MainWindow.C:153
+#: MainWindow.C:155 MainWindow.C:157 MainWindow.C:159 MainWindow.C:161
+#: MainWindow.C:163 MainWindow.C:165 MainWindow.C:167 MainWindow.C:169
+msgid "(unused)"
+msgstr "(não usado)"
+
+#: MainWindow.C:147
+#, fuzzy
+msgid "&Set Bookmark"
+msgstr "&Configurar marca"
+
+#: MainWindow.C:172
+#, fuzzy
+msgid "&Go to Bookmark"
+msgstr "Ir para mar&ca"
+
+#: MainWindow.C:246
+msgid "(invalid)"
+msgstr "(inválido)"
+
+#: MainWindow.C:302
+#, fuzzy
+msgid "Load Levels From File"
+msgstr "Carregar níveis de arquivo"
+
+#: MainWindow.C:329
+msgid "No levels found in file"
+msgstr "Nenhum nível encontrado no arquivo"
+
+#: PlayField.C:51
+msgid "Level"
+msgstr "Nível"
+
+#: PlayField.C:51
+msgid "Steps"
+msgstr "Passos"
+
+#: PlayField.C:52
+msgid "Pushes"
+msgstr "Movimentos"
+
+#: PlayField.C:309
+msgid "Level completed"
+msgstr "Nível completado"
+
+#: PlayField.C:603
+msgid ""
+"This is the last level in\n"
+"the current collection."
+msgstr ""
+"Este é o último nível\n"
+"da coleção corrente."
+
+#: PlayField.C:609
+msgid ""
+"You have not completed\n"
+"this level yet."
+msgstr ""
+"Você ainda não completou\n"
+"este nível."
+
+#: PlayField.C:623
+msgid ""
+"This is the first level in\n"
+"the current collection."
+msgstr ""
+"Este é o primeiro nível\n"
+"da coleção atual."
+
+#: PlayField.C:776
+msgid ""
+"Sorry, bookmarks for external levels\n"
+"is not implemented yet."
+msgstr ""
+"Desculpe, marcação de favoritos para níveis externos\n"
+"ainda não foi implementado."
+
+#: PlayField.C:799
+msgid "This level is broken"
+msgstr "Este nível está corrompido"
+
+#: main.C:30
+msgid "The japanese warehouse keeper game"
+msgstr "O jogo do almoxarife japonês"
+
+#: main.C:37
+msgid "Level collection file to load"
+msgstr "Coleção de níveis a ser carregado"
+
+#: main.C:45
+msgid "KSokoban"
+msgstr "KSokoban"
+
+#: main.C:53
+msgid "For contributing the Sokoban levels included in this game"
+msgstr ""
+
+#: _translatorinfo.cpp:1
+msgid ""
+"_: NAME OF TRANSLATORS\n"
+"Your names"
+msgstr "Elvis Pfützenreuter"
+
+#: _translatorinfo.cpp:3
+msgid ""
+"_: EMAIL OF TRANSLATORS\n"
+"Your emails"
+msgstr "epx@conectiva.com.br"
+
+#~ msgid ""
+#~ "a Sokoban game for KDE\n"
+#~ "\n"
+#~ "ksokoban is copyright (c) 1998-2000 Anders Widell <awl@hem.passagen.se>\n"
+#~ "See http://hem.passagen.se/awl/ksokoban/ for more info on ksokoban\n"
+#~ "\n"
+#~ "The levels are copyrighted by their authors:"
+#~ msgstr ""
+#~ "um jogo Sokoban para o KDE\n"
+#~ "\n"
+#~ "ksokoban é Copyright (c) 1998-2000 Anders Widell <awl@hem.passagen.se>\n"
+#~ "Veja http://hem.passagen.se/awl/ksokoban/ para maiores informações\n"
+#~ "\n"
+#~ "Os níveis são de propriedade de seus autores:"
+
+#~ msgid ""
+#~ "\n"
+#~ "\n"
+#~ "Sasquatch - David W. Skinner <sasquatch@bentonrea.com>\n"
+#~ "Mas Sasquatch - David W. Skinner <sasquatch@bentonrea.com>\n"
+#~ "Sasquatch III - David W. Skinner <sasquatch@bentonrea.com>\n"
+#~ "Microban - David W. Skinner <sasquatch@bentonrea.com>\n"
+#~ msgstr ""
+#~ "\n"
+#~ "\n"
+#~ "Sasquatch - David W. Skinner <sasquatch@bentonrea.com>\n"
+#~ "Mas Sasquatch - David W. Skinner <sasquatch@bentonrea.com>\n"
+#~ "Sasquatch III - David W. Skinner <sasquatch@bentonrea.com>\n"
+#~ "Microban - David W. Skinner <sasquatch@bentonrea.com>\n"
