--- a/trabalhoP/PT/ktuberling.po
+++ b/trabalhoP/PT/ktuberling.po
@@ -1,9 +1,277 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
-<title>403 Forbidden</title>
-</head><body>
-<h1>Forbidden</h1>
-<p>You don't have permission to access /~jj/plc-17/PO/PT/ktuberling.po
-on this server.<br />
-</p>
-</body></html>
+msgid ""
+msgstr ""
+"Project-Id-Version: ktuberling\n"
+"POT-Creation-Date: 2002-01-16 02:36+0100\n"
+"PO-Revision-Date: 2001-02-05 21:00-0300\n"
+"Last-Translator: Elvis Pfützenreuter <epx@conectiva.com>\n"
+"Language-Team: Brazilian Portugueses <kde-i18n-pt_BR@kde.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 0.7.1\n"
+
+#: main.cpp:16
+msgid "Potato game for kids"
+msgstr "Jogo de batatas para crianças"
+
+#: main.cpp:17
+#, fuzzy
+msgid ""
+"A program by Eric Bischoff <e.bischoff@noos.fr>\n"
+"and John Calhoun.\n"
+"\n"
+"This program is dedicated to my daughter Sunniva.\n"
+"\n"
+"You need OGG Vorbis rc3 to be able to hear the sounds."
+msgstr ""
+"Um programa de Eric Bischoff <e.bischoff@noos.fr>\n"
+"e John Calhoun.\n"
+"\n"
+"Este programa é dedicado à minha filha Sunniva."
+
+#: main.cpp:25
+msgid "KTuberling"
+msgstr "KTuberling"
+
+#: main.cpp:28
+msgid "Developer"
+msgstr ""
+
+#: main.cpp:29
+msgid "Original concept and artwork"
+msgstr ""
+
+#: main.cpp:30 main.cpp:31
+msgid "New artwork"
+msgstr ""
+
+#: main.cpp:32
+msgid "Sounds tuning"
+msgstr ""
+
+#: toplevel.cpp:151
+#, fuzzy
+msgid "Save &as Picture..."
+msgstr "Salvar &como figura..."
+
+#: toplevel.cpp:161
+msgid "&Sound"
+msgstr "&Som"
+
+#: toplevel.cpp:196
+msgid "Could not load file."
+msgstr "Impossível carregar arquivo."
+
+#: toplevel.cpp:219 toplevel.cpp:258
+msgid "Only saving to local files currently supported."
+msgstr "Apenas arquivos locais são suportados."
+
+#: toplevel.cpp:234 toplevel.cpp:288
+msgid "Could not save file."
+msgstr "Impossível salvar arquivo."
+
+#: toplevel.cpp:246
+msgid ""
+"*.xpm|Unix pixmaps (*.xpm)\n"
+"*.jpg|JPEG compressed files (*.jpg)\n"
+"*.png|Next generation pictures (*.png)\n"
+"*.bmp|Windows bitmaps (*.bmp)\n"
+"*|All picture formats"
+msgstr ""
+"*.xpm|Unix pixmaps (*.xpm)\n"
+"*.jpg|figuras JPEG (*.jpg)\n"
+"*.png|figuras PNG (*.png)\n"
+"*.bmp|bitmaps do Windows (*.bmp)\n"
+"*|Todos os formatos"
+
+#: toplevel.cpp:282
+msgid "Unknown picture format."
+msgstr "Formato de figura desconhecido."
+
+#: toplevel.cpp:302
+msgid "Could not print picture."
+msgstr "Impossível imprimir figura."
+
+#: toplevel.cpp:305
+msgid "Picture successfully printed."
+msgstr "Figura impressa com sucesso."
+
+#: playground.cpp:94
+msgid ""
+"Fatal error:\n"
+"I could not load the pictures. I'll quit."
+msgstr ""
+"Erro fatal:\n"
+"Impossível carregar as figuras. Eu vou sair."
+
+#: pics/layout.i18n:7
+msgid "Potato Guy"
+msgstr ""
+
+#: pics/layout.i18n:9 pics/layout.i18n:34
+msgid "Eyes"
+msgstr "Olhos"
+
+#: pics/layout.i18n:10
+msgid "Eyesbrows"
+msgstr "Sombrancelhas"
+
+#: pics/layout.i18n:11
+msgid "Noses"
+msgstr "Narizes"
+
+#: pics/layout.i18n:12
+msgid "Ears"
+msgstr "Orelhas"
+
+#: pics/layout.i18n:13
+msgid "Mouths"
+msgstr "Bocas"
+
+#: pics/layout.i18n:14
+msgid "Goodies"
+msgstr "Diversos"
+
+#: pics/layout.i18n:16
+msgid "en/tuberling.ogg"
+msgstr "en/tuberling.ogg"
+
+#: pics/layout.i18n:17 pics/layout.i18n:43
+msgid "en/eye.ogg"
+msgstr "en/eye.ogg"
+
+#: pics/layout.i18n:18
+msgid "en/eyebrow.ogg"
+msgstr "en/eyebrow.ogg"
+
+#: pics/layout.i18n:19
+msgid "en/nose.ogg"
+msgstr "en/nose.ogg"
+
+#: pics/layout.i18n:20
+msgid "en/ear.ogg"
+msgstr "en/ear.ogg"
+
+#: pics/layout.i18n:21
+msgid "en/mouth.ogg"
+msgstr "en/mouth.ogg"
+
+#: pics/layout.i18n:22 pics/layout.i18n:45
+msgid "en/hat.ogg"
+msgstr "en/hat.ogg"
+
+#: pics/layout.i18n:23
+msgid "en/moustache.ogg"
+msgstr "en/moustache.ogg"
+
+#: pics/layout.i18n:24
+msgid "en/cigar.ogg"
+msgstr "en/cigar.ogg"
+
+#: pics/layout.i18n:25
+msgid "en/bow.ogg"
+msgstr "en/bow.ogg"
+
+#: pics/layout.i18n:26
+msgid "en/sunglasses.ogg"
+msgstr "en/sunglasses.ogg"
+
+#: pics/layout.i18n:27 pics/layout.i18n:49
+msgid "en/spectacles.ogg"
+msgstr "en/spectacles.ogg"
+
+#: pics/layout.i18n:28
+msgid "en/earring.ogg"
+msgstr "en/earring.ogg"
+
+#: pics/layout.i18n:29
+msgid "en/badge.ogg"
+msgstr "en/badge.ogg"
+
+#: pics/layout.i18n:30
+msgid "en/watch.ogg"
+msgstr "en/watch.ogg"
+
+#: pics/layout.i18n:32
+msgid "Penguin"
+msgstr ""
+
+#: pics/layout.i18n:35
+msgid "Tie"
+msgstr ""
+
+#: pics/layout.i18n:36
+msgid "Hair"
+msgstr ""
+
+#: pics/layout.i18n:37
+msgid "Necklaces"
+msgstr ""
+
+#: pics/layout.i18n:38
+msgid "Hats"
+msgstr ""
+
+#: pics/layout.i18n:39
+msgid "Glasses"
+msgstr ""
+
+#: pics/layout.i18n:40
+msgid "Scarf"
+msgstr ""
+
+#: pics/layout.i18n:42
+#, fuzzy
+msgid "en/penguin.ogg"
+msgstr "en/earring.ogg"
+
+#: pics/layout.i18n:44
+msgid "en/tie.ogg"
+msgstr "en/tie.ogg"
+
+#: pics/layout.i18n:46
+#, fuzzy
+msgid "en/hair.ogg"
+msgstr "en/hat.ogg"
+
+#: pics/layout.i18n:47
+#, fuzzy
+msgid "en/horn.ogg"
+msgstr "en/bow.ogg"
+
+#: pics/layout.i18n:48
+#, fuzzy
+msgid "en/necklace.ogg"
+msgstr "en/spectacles.ogg"
+
+#: pics/layout.i18n:50
+#, fuzzy
+msgid "en/scarf.ogg"
+msgstr "en/cigar.ogg"
+
+#: _translatorinfo.cpp:1
+msgid ""
+"_: NAME OF TRANSLATORS\n"
+"Your names"
+msgstr "Elvis Pfützenreuter"
+
+#: _translatorinfo.cpp:3
+msgid ""
+"_: EMAIL OF TRANSLATORS\n"
+"Your emails"
+msgstr "epx@conectiva.com.br"
+
+#~ msgid "Only saving to local files supported yet."
+#~ msgstr "Somente arquivos locais são suportados."
+
+#~ msgid "&New"
+#~ msgstr "&Novo"
+
+#~ msgid "&Save..."
+#~ msgstr "&Salvar..."
+
+#~ msgid "&Print"
+#~ msgstr "&Imprimir"
+
+#~ msgid "New"
+#~ msgstr "Novo"
