--- a/trabalhoP/PT/lskat.po
+++ b/trabalhoP/PT/lskat.po
@@ -1,9 +1,530 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
-<title>403 Forbidden</title>
-</head><body>
-<h1>Forbidden</h1>
-<p>You don't have permission to access /~jj/plc-17/PO/PT/lskat.po
-on this server.<br />
-</p>
-</body></html>
+msgid ""
+msgstr ""
+"Project-Id-Version: lskat\n"
+"POT-Creation-Date: 2002-02-10 02:45+0100\n"
+"PO-Revision-Date: 2001-01-16 13:30-0300\n"
+"Last-Translator: Elvis Pfützenreuter <epx@conectiva.com>\n"
+"Language-Team: Brazilian Portugueses <kde-i18n-pt_BR@kde.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 0.7.1\n"
+
+#: _translatorinfo.cpp:1
+msgid ""
+"_: NAME OF TRANSLATORS\n"
+"Your names"
+msgstr "Elvis Pfützenreuter"
+
+#: _translatorinfo.cpp:3
+msgid ""
+"_: EMAIL OF TRANSLATORS\n"
+"Your emails"
+msgstr "Elvis Pfützenreuter"
+
+#: aboutdlg.cpp:37
+msgid "About Lieutnant sKat"
+msgstr "Sobre o Tenente Skat"
+
+#: aboutdlg.cpp:66
+#, c-format
+msgid ""
+"Lieutnant\n"
+"Skat\n"
+"\n"
+"Version %1"
+msgstr ""
+"Lieutnant\n"
+"Skat\n"
+"\n"
+"Versão %1"
+
+#: aboutdlg.cpp:73
+msgid ""
+"(c) 2000 Martin Heni\n"
+"Email: martin@heni-online.de\n"
+"\n"
+"Game features:\n"
+"  - Multiplayer network game\n"
+"  - Up to two computer players\n"
+"\n"
+"\n"
+" Many thanks to Laura for betatesting!"
+msgstr ""
+"(c) 2000 Martin Heni\n"
+"Email: martin@heni-online.de\n"
+"\n"
+"Recursos:\n"
+"  - Jogo em rede\n"
+"  - Até dois computadores-jogadores\n"
+"\n"
+"\n"
+" Agradecimentos a Laura por testar!"
+
+#: lskat.cpp:178 lskat.cpp:179
+msgid "Starting a new game..."
+msgstr "Iniciando um novo jogo..."
+
+#: lskat.cpp:180
+msgid "&End Game"
+msgstr "&Finalizar jogo"
+
+#: lskat.cpp:182
+msgid "Ending the current game..."
+msgstr "Finalizando o jogo corrente..."
+
+#: lskat.cpp:183
+msgid "Aborts a currently played game. No winner will be declared."
+msgstr "Aborta um jogo corrente. Nenhum jogador será declarado."
+
+#: lskat.cpp:184
+msgid "&Clear Statistics..."
+msgstr "&Limpar estatísticas..."
+
+#: lskat.cpp:186
+msgid "Delete all time statistics..."
+msgstr "Apagar todas as estatísticas de tempo..."
+
+#: lskat.cpp:187
+msgid "Clears the all time statistics which is kept in all sessions."
+msgstr "Lima todas as estatísticas de tempo que são mantidas em todas as sessões."
+
+#: lskat.cpp:188
+msgid "Send &Message..."
+msgstr "Mandar &mensagem..."
+
+#: lskat.cpp:190
+msgid "Sending message to remote player..."
+msgstr "Mandando mensagem para o jogador remoto..."
+
+#: lskat.cpp:191
+msgid "Allows you to talk with a remote player."
+msgstr "Permite a você falar com um jogador remoto"
+
+#: lskat.cpp:193
+msgid "Exiting..."
+msgstr "Saindo..."
+
+#: lskat.cpp:194
+msgid "Quits the program."
+msgstr "Sai do programa."
+
+#: lskat.cpp:196
+#, fuzzy
+msgid "&Show Statusbar"
+msgstr "Barra de &Status"
+
+#: lskat.cpp:198 lskat.cpp:199
+msgid "Toggle the statusbar..."
+msgstr "Comutar a barra de status..."
+
+#: lskat.cpp:201
+msgid "Startplayer"
+msgstr "Jogador inicial"
+
+#: lskat.cpp:203
+msgid "Changing startplayer..."
+msgstr "Mudando jogador inicial..."
+
+#: lskat.cpp:204
+msgid "Chooses which player begins the next game."
+msgstr "Escolhe que jogador começa o próximo jogo."
+
+#: lskat.cpp:206
+msgid "Player &1"
+msgstr "Jogador &1"
+
+#: lskat.cpp:207
+msgid "Player &2"
+msgstr "Jogador &2"
+
+#: lskat.cpp:210
+#, fuzzy
+msgid "Player &1 Played By"
+msgstr "Jogador &1 é "
+
+#: lskat.cpp:212 lskat.cpp:213
+msgid "Changing who plays player 1..."
+msgstr "Mudando quem é o jogador 1..."
+
+#: lskat.cpp:215
+msgid "&Player"
+msgstr "&Jogador"
+
+#: lskat.cpp:216
+msgid "&Computer"
+msgstr "&Computador"
+
+#: lskat.cpp:217
+msgid "&Remote"
+msgstr "&Remoto"
+
+#: lskat.cpp:219
+#, fuzzy
+msgid "Player &2 Played By"
+msgstr "Jogador &2 é "
+
+#: lskat.cpp:221 lskat.cpp:222
+msgid "Changing who plays player 2..."
+msgstr "Mudando quem é o jogador 2..."
+
+#: lskat.cpp:225
+msgid "&Level"
+msgstr "&Nível"
+
+#: lskat.cpp:227
+msgid "Change level..."
+msgstr "Mudar nível..."
+
+#: lskat.cpp:228
+msgid "Change the strength of the computer player."
+msgstr "Muda a força do computador-jogador."
+
+#: lskat.cpp:230
+msgid "&Normal"
+msgstr "&Normal"
+
+#: lskat.cpp:231
+msgid "&Advanced"
+msgstr "&Avançado"
+
+#: lskat.cpp:232
+msgid "&Hard"
+msgstr "&Difícil"
+
+#: lskat.cpp:235
+msgid "Select &Carddeck..."
+msgstr "Selecionar &baralho..."
+
+#: lskat.cpp:237
+msgid "Configure carddecks..."
+msgstr "Configurar baralhos..."
+
+#: lskat.cpp:238
+msgid "Choose how the cards should look like."
+msgstr "Escolha a aparência das cartas."
+
+#: lskat.cpp:240
+msgid "Change &Names..."
+msgstr "Mudar &nomes..."
+
+#: lskat.cpp:242 lskat.cpp:243
+msgid "Configure player names..."
+msgstr "Configurar nomes dos jogadores..."
+
+#: lskat.cpp:261
+msgid "This leaves space for the mover"
+msgstr "Isto deixa espaço para o movimento"
+
+#: lskat.cpp:262
+msgid "23:45"
+msgstr "23:45"
+
+#: lskat.cpp:263 lskat.cpp:622 lskat.cpp:855 lskat.cpp:979
+msgid "Ready"
+msgstr "Pronto"
+
+#: lskat.cpp:266
+msgid "(c) Martin Heni   "
+msgstr "(c) Martin Heni   "
+
+#: lskat.cpp:267
+msgid "Welcome to Lieutnant Skat"
+msgstr "Bem-vindo ao Tenente Skat"
+
+#: lskat.cpp:293 lskat.cpp:389 lskat.cpp:780 lskatview.cpp:277 main.cpp:40
+msgid "Lieutnant Skat"
+msgstr "Tenente Skat"
+
+#: lskat.cpp:413
+#, fuzzy
+msgid "Do you really want to clear the all time statistical data?"
+msgstr ""
+"Você realmente deseja apagar todas as\n"
+"estatísticas de tempo ?\n"
+
+#: lskat.cpp:459
+msgid "Game ended...start a new one..."
+msgstr "Jogo terminado... inicie um novo..."
+
+#: lskat.cpp:683
+msgid "No game running"
+msgstr "Nenhum jogo em curso"
+
+#: lskat.cpp:686
+msgid "%1 to move ..."
+msgstr "%1 para mover ..."
+
+#: lskat.cpp:701
+#, fuzzy
+msgid ""
+"Cannot start player 1. Maybe the network connection failed or the computer "
+"player process file is not found."
+msgstr ""
+"Impossível iniciar jogador 1. Talvez a conexão de rede\n"
+"falhou ou o arquivo de processo do computador não foi\n"
+"encontrado.\n"
+
+#: lskat.cpp:710
+#, fuzzy
+msgid ""
+"Cannot start player 2. Maybe the network connection failed or the computer "
+"player process file is not found."
+msgstr ""
+"Impossível iniciar jogador 2. Talvez a conexão de rede\n"
+"falhou ou o arquivo de processo do computador não foi\n"
+"encontrado.\n"
+
+#: lskat.cpp:773
+msgid "Remote connection to %1:%2..."
+msgstr "Conexão remota para %1:%2..."
+
+#: lskat.cpp:777
+msgid "Offering remote connection on port %1 ..."
+msgstr "Oferecendo conexão remota na porta %1 ..."
+
+#: lskat.cpp:779
+msgid "Abort"
+msgstr "Abortar"
+
+#: lskat.cpp:845
+msgid "About the program..."
+msgstr "Sobre o programa..."
+
+#: lskat.cpp:876
+msgid "Waiting for the computer to move..."
+msgstr "Aguardando pelo computador jogar..."
+
+#: lskat.cpp:891
+msgid "Waiting for remote player..."
+msgstr "Aguardando jogador remoto..."
+
+#: lskat.cpp:897
+msgid "Please make your move..."
+msgstr "Faça seu movimento..."
+
+#: lskat.cpp:931
+msgid "Remote connection lost for player 1..."
+msgstr "Conexão remota perdida para jogador 1..."
+
+#: lskat.cpp:938
+msgid "Remote connection lost for player 2..."
+msgstr "Conexão remota perdida para jogador 2..."
+
+#: lskat.cpp:950
+msgid ""
+"Message from remote player:\n"
+msgstr ""
+"Mensagem do jogador remoto:\n"
+
+#: lskat.cpp:968
+msgid "Remote player ended game..."
+msgstr "Jogador remoto terminou o jogo..."
+
+#: lskat.cpp:993
+msgid "You are network client...loading remote game..."
+msgstr "Você é cliente de rede... carregando jogo remoto..."
+
+#: lskat.cpp:1006
+msgid "You are network server..."
+msgstr "Você é servidor de rede..."
+
+#: lskat.cpp:1063
+msgid ""
+"Severe internal error. Move to illegal position.\n"
+"Restart game and report bug to the developer.\n"
+msgstr ""
+"Erro interno severo. Movimento para posição ilegal.\n"
+"Reinicie o jogo e reporte o problema ao desenvolvedor.\n"
+
+#: lskat.cpp:1089
+msgid ""
+"Ehm, this move would not follow the rulebook.\n"
+"Better think again!\n"
+msgstr ""
+"Hmm, este jogo não segue a regra.\n"
+"Melhor pensar novamente!\n"
+
+#: lskat.cpp:1095
+msgid ""
+"It is not your turn.\n"
+msgstr ""
+"Não é sua vez.\n"
+
+#: lskat.cpp:1100
+msgid ""
+"This move is not possible.\n"
+msgstr ""
+"Este movimento não é possível.\n"
+
+#: lskatdoc.cpp:742
+msgid "Alice"
+msgstr "Maria"
+
+#: lskatdoc.cpp:744
+msgid "Bob"
+msgstr "João"
+
+#: lskatview.cpp:286
+msgid "for"
+msgstr "para"
+
+#: lskatview.cpp:295
+msgid "K D E"
+msgstr "K D E"
+
+#: lskatview.cpp:395
+msgid "Game over"
+msgstr "Fim de jogo"
+
+#: lskatview.cpp:405
+msgid "Game was aborted - no winner"
+msgstr "O jogo foi abortado - sem vencedor"
+
+#: lskatview.cpp:416
+msgid "      Game is drawn"
+msgstr "      Jogo empatado"
+
+#: lskatview.cpp:420
+msgid "Player 1 - %1 won "
+msgstr "Jogador 1 - %1 venceu"
+
+#: lskatview.cpp:424
+msgid "Player 2 - %1 won "
+msgstr "Jogador 2 - %1 venceu"
+
+#: lskatview.cpp:433 lskatview.cpp:617
+msgid "Score:"
+msgstr "Pontos:"
+
+#: lskatview.cpp:460 lskatview.cpp:464
+#, fuzzy
+msgid "%1 points"
+msgstr " pontos"
+
+#: lskatview.cpp:483 lskatview.cpp:500
+#, fuzzy
+msgid "%1 won to nil. Congratulations!"
+msgstr "%1 venceu. Congratulações!"
+
+#: lskatview.cpp:491 lskatview.cpp:508
+#, fuzzy
+msgid "%1 won with 90 points. Super!"
+msgstr "%1 venceu por mais de 90 pontos. Super!"
+
+#: lskatview.cpp:493 lskatview.cpp:510
+msgid "%1 won over 90 points. Super!"
+msgstr "%1 venceu por mais de 90 pontos. Super!"
+
+#: lskatview.cpp:621
+msgid "Move:"
+msgstr "Movimento:"
+
+#: lskatview.cpp:653
+msgid "Points:"
+msgstr "Pontos:"
+
+#: lskatview.cpp:658
+msgid "Won:"
+msgstr "Venceu:"
+
+#: lskatview.cpp:663
+msgid "Games:"
+msgstr "Jogos:"
+
+#: lskatview.cpp:795
+msgid "Hold on..the other was not yet gone..."
+msgstr "Espere... o outro ainda não se foi..."
+
+#: lskatview.cpp:798
+msgid "Hold your horses..."
+msgstr "Segure seus cavalos..."
+
+#: lskatview.cpp:801
+msgid "Ah ah ah...only one go at a time..."
+msgstr "Ah ah ah... somente um por vez..."
+
+#: lskatview.cpp:804
+msgid "Please wait... it is not your turn."
+msgstr "Aguarde... não é sua vez."
+
+#: main.cpp:30
+msgid "Enter debug level"
+msgstr "Digite o nível de depuração"
+
+#: main.cpp:42
+#, fuzzy
+msgid "Card Game"
+msgstr "&Finalizar jogo"
+
+#: msgdlg.cpp:44
+#, fuzzy
+msgid "Send Message to Remote Player..."
+msgstr "Mandar mensagem ao jogador remoto..."
+
+#: msgdlg.cpp:50
+msgid "Enter message"
+msgstr "Digite mensagem"
+
+#: msgdlg.cpp:62
+msgid "Send"
+msgstr "Mandar"
+
+#: namedlg.cpp:32
+#, fuzzy
+msgid "Configure Names..."
+msgstr "Configurar nomes..."
+
+#: namedlg.cpp:49
+msgid "Player names"
+msgstr "Nomes dos jogadores"
+
+#: namedlg.cpp:67 namedlg.cpp:82
+msgid "Player 1"
+msgstr "Jogador 1"
+
+#: namedlg.cpp:72 namedlg.cpp:88
+msgid "Enter a player's name"
+msgstr "Digite um nome de jogador"
+
+#: namedlg.cpp:86
+msgid "Player 2"
+msgstr "Jogador 2"
+
+#: networkdlg.cpp:50
+#, fuzzy
+msgid "Configure Network Options..."
+msgstr "Preferências de rede..."
+
+#: networkdlg.cpp:55
+msgid "Remote settings"
+msgstr "Preferências remotas..."
+
+#: networkdlg.cpp:61
+msgid "localhost"
+msgstr "máquina local"
+
+#: networkdlg.cpp:65
+msgid "Remote host"
+msgstr "Máquina remota"
+
+#: networkdlg.cpp:70
+msgid "7442"
+msgstr "7442"
+
+#: networkdlg.cpp:75
+msgid "Port"
+msgstr "Porta"
+
+#: networkdlg.cpp:79
+msgid ""
+"You can leave the remote host input empty.\n"
+"Then your computer acts as server only and\n"
+"does not try to connect to a remote host."
+msgstr ""
+"Você pode deixar a entrada da máquina remota\n"
+"vazia. Então seu computador será o servidor e\n"
+"não tentará conectar-se a um computador remoto."
+
+#~ msgid "LSkat"
+#~ msgstr "LSkat"
